RESOLVED FIXED 156855
Modern IDB (Workers): More IDBConnectionProxy refactoring
https://bugs.webkit.org/show_bug.cgi?id=156855
Summary Modern IDB (Workers): More IDBConnectionProxy refactoring
Brady Eidson
Reported 2016-04-21 11:41:37 PDT
Modern IDB (Workers): More IDBConnectionProxy refactoring
Attachments
Patch v1 (13.26 KB, patch)
2016-04-21 13:35 PDT, Brady Eidson
darin: review+
Brady Eidson
Comment 1 2016-04-21 13:35:53 PDT
Created attachment 276951 [details] Patch v1
WebKit Commit Bot
Comment 2 2016-04-21 13:37:11 PDT
Attachment 276951 [details] did not pass style-queue: ERROR: Source/WebCore/Modules/indexeddb/client/IDBConnectionProxy.h:40: Missing space before { [whitespace/braces] [5] Total errors found: 1 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brady Eidson
Comment 3 2016-04-21 13:38:18 PDT
Style issue fixed locally.
Darin Adler
Comment 4 2016-04-21 13:47:30 PDT
Comment on attachment 276951 [details] Patch v1 View in context: https://bugs.webkit.org/attachment.cgi?id=276951&action=review > LayoutTests/ChangeLog:8 > + * storage/indexeddb/modern/workers-enable-expected.txt: Revert some of the PASS expectations to FAIL, just for now. Really?
Brady Eidson
Comment 5 2016-04-21 13:57:38 PDT
(In reply to comment #4) > Comment on attachment 276951 [details] > Patch v1 > > View in context: > https://bugs.webkit.org/attachment.cgi?id=276951&action=review > > > LayoutTests/ChangeLog:8 > > + * storage/indexeddb/modern/workers-enable-expected.txt: Revert some of the PASS expectations to FAIL, just for now. > > Really? Yes - It's brand new and in flux, and they'll revert back to PASS in the next couple of patches.
Brady Eidson
Comment 6 2016-04-21 14:08:25 PDT
Note You need to log in before you can comment on or make changes to this bug.